# recruit-genius-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.Docker.md  README.md  alembic.ini  docker-compose.yml  docker-start.sh  inspect_tool.py  migrate_to_langchain_vectors.py  nohup.out  pyproject.toml  test_async_graph.py  test_chat_api.sh  test_cv_chat_api.sh  test_direct_tool.py  test_job_processing.py  test_job_save.sh  test_matcher.py  test_model_config.py  test_rag.py  test_vector_store_direct.py  verify_migration.py  verify_tables_dropped.py
alembic/: env.py
app/: __init__.py  main.py
bot/: telegram_handler.py
docs/: .uv-quickref.md  CLEANUP_SUMMARY.md  CV_CHAT_AGENT.md  CV_CHAT_IMPLEMENTATION_SUMMARY.md  CV_CHAT_QUICKSTART.md  CV_CHAT_REFACTOR.md  DATABASE_MIGRATIONS.md  HYBRID_MATCHING_ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  ISSUE_RESOLVED.md  JOB_GENERATION_WORKFLOW.md  JOB_GENERATOR_REFACTOR.md  JOB_PROCESSING_ARCHITECTURE.md  JOB_PROCESSING_QUICKSTART.md  LLM_MODEL_CONFIGURATION.md  MATCHER_AGENT.md  MATCHER_IMPLEMENTATION_SUMMARY.md  MATCHER_QUICKSTART.md  QUICKSTART-UV.md  QUICKSTART.md  QUICK_REFERENCE.md  RAG_FIRST_METRICS_ARCHITECTURE.md  REFACTOR_SUMMARY.md  VERSION_CORRECTIONS.md
local/: docker-compose.yaml
tests/: test_api.py  test_job_generator.py
tgbot/: tgbot.py
versions/: 002_add_langchain_vectorstore.py  4165a975d65b_add_cv_embeddings_cv_metrics_chat_.py  6b6c9713cb1a_drop_unused_agent_executions_table.py  7b8facf0958d_drop_unused_chat_tables.py  821fa5ff6a79_convert_cmetadata_to_jsonb.py  d96d37f98471_initial_schema.py  (+3 more)
(+85 files in other folders)
