[project]
name = "hr-recruitment-backend"
version = "0.1.0"
description = "AI-powered HR Recruitment Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langgraph>=0.2.45",
    "langgraph-checkpoint-postgres>=2.0.6",
    "python-multipart>=0.0.17",
    "python-dotenv>=1.0.1",
    "email-validator>=2.3.0",
    "psycopg-binary>=3.2.12",
    "psycopg2-binary>=2.9.11",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "redis>=5.0.0",
    "pgvector>=0.3.0",
    "tiktoken>=0.5.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "black>=24.10.0",
    "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
